--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Web App Platform",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+	"start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/rikuson/browxin-client/issues"
   },
-  "homepage": "https://github.com/rikuson/browxin-client#readme"
+  "homepage": "https://github.com/rikuson/browxin-client#readme",
+  "dependencies": {
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5"
+  }
 }
