--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Web App Platform",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-	"start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "build": "webpack --display-error-details --optimize-minimize"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,12 @@
   },
   "homepage": "https://github.com/rikuson/browxin-client#readme",
   "dependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
   }
