--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
     "url": "https://github.com/rikuson/browxin-client/issues"
   },
   "homepage": "https://github.com/rikuson/browxin-client#readme",
+  "devDependencies": {},
   "dependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.0.0",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.2.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.2"
   }
 }
