--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Web App Platform",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
-    "build": "webpack --display-error-details --optimize-minimize"
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -32,6 +31,7 @@
     "bootstrap": "^3.3.7",
     "jquery": "^3.2.1",
     "react": "^15.6.1",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2"
