--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.1",
+    "redux-logger": "^3.0.6",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2"
   }
