--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
-	"test": "./node_modules/.bin/testem ci -l Firefox"
+    "test": "./node_modules/.bin/testem ci -l Firefox,PhantomJS"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
   "devDependencies": {
     "chai": "^4.0.2",
     "mocha": "^3.4.2",
+    "phantomjs": "^2.1.7",
     "testem": "^1.18.0"
   },
   "dependencies": {
