--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "browxin-client",
-  "version": "1.0.0",
+  "version": "0.0.0",
+  "engines": {
+	  "node": "7.3.0",
+	  "npm": "3.10.10"
+  },
   "description": "Web App Platform",
   "main": "index.js",
   "scripts": {
