--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "app",
     "platform"
   ],
-  "author": "rikson",
+  "author": "Rikson",
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/rikuson/browxin-client/issues"
