--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "browxin-client",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "engines": {
     "node": "7.3.0",
     "npm": "3.10.10"
   },
   "description": "Web App Platform",
-  "main": "index.js",
+  "main": "./src/Index.js",
   "scripts": {
     "start": "webpack-dev-server",
     "test": "./node_modules/.bin/testem ci -l Firefox,PhantomJS",
@@ -32,7 +32,9 @@
     "chai": "^4.0.2",
     "mocha": "^3.4.2",
     "phantom": "^4.0.4",
-    "testem": "^1.18.0"
+    "redux-logger": "^3.0.6",
+    "testem": "^1.18.0",
+    "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
     "babel-core": "^6.23.1",
@@ -46,8 +48,6 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "redux": "^3.7.1",
-    "redux-logger": "^3.0.6",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.2"
+    "webpack": "^2.2.1"
   }
 }
