--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "npm": "3.10.10"
   },
   "description": "Web App Platform",
-  "main": "./src/Index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "start": "webpack-dev-server",
     "test": "./node_modules/.bin/testem ci -l Firefox,PhantomJS",
@@ -45,6 +45,7 @@
     "jquery": "^3.2.1",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.0",
+    "react-bootstrap-theme-switcher": "^1.0.6",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "redux": "^3.7.1",
