--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "npm": "3.10.10"
   },
   "description": "Web App Platform",
-  "main": "./dist/app.js",
+  "main": "./dist/index.js",
   "scripts": {
     "start": "webpack-dev-server",
     "test": "./node_modules/.bin/testem ci -l Firefox,PhantomJS",
