--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "description": "Web App Platform",
   "main": "./dist/index.js",
   "scripts": {
-    "start": "webpack-dev-server",
-    "test": "./node_modules/.bin/testem ci -l Firefox,PhantomJS",
-    "build": "webpack --display-error-details --optimize-minimize"
+    "start": "NODE_ENV=development webpack-dev-server",
+    "test": "NODE_ENV=development ./node_modules/.bin/testem ci -l Firefox,PhantomJS",
+    "build": "NODE_ENV=production webpack --display-error-details --optimize-minimize"
   },
   "repository": {
     "type": "git",
