--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server",
     "test": "NODE_ENV=development ./node_modules/.bin/karma start --single-run --browsers PhantomJS,Firefox",
+    "test:all": "NODE_ENV=development ./node_modules/.bin/karma start --single-run",
     "build": "NODE_ENV=production webpack --display-error-details --optimize-minimize"
   },
   "repository": {
@@ -43,8 +44,11 @@
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-safari-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.4",
     "mocha": "^3.4.2",
     "phantom": "^4.0.4",
+    "phantomjs-polyfill-object-assign": "0.0.2",
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
