--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "npm": "3.10.10"
   },
   "description": "Web App Platform",
-  "main": "./dist/index.js",
+  "main": "./index.js",
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server",
     "test": "NODE_ENV=development ./node_modules/.bin/karma start --single-run --browsers PhantomJS,Firefox",
@@ -49,6 +49,7 @@
     "mocha": "^3.4.2",
     "phantom": "^4.0.4",
     "phantomjs-polyfill-object-assign": "0.0.2",
+    "selenium-webdriver": "^3.4.0",
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
