--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "npm": "3.10.10"
   },
   "description": "Web App Platform",
-  "main": "./index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server",
     "test": "NODE_ENV=development ./node_modules/.bin/karma start --single-run --browsers PhantomJS,Firefox",
