--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ node_js: 7
 before_install:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
+before_script:
+- npm run build
 deploy:
   provider: npm
   email: noskir@icloud.com
