--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "browxin-client",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "engines": {
     "node": "7.3.0",
     "npm": "3.10.10"
@@ -18,10 +18,10 @@
     "url": "git+https://github.com/Browxin/browxin-client.git"
   },
   "files": [
-	  "README.md",
-	  "package.json",
-	  "dist",
-	  "LICENSE"
+    "README.md",
+    "package.json",
+    "dist",
+    "LICENSE"
   ],
   "keywords": [
     "browxin",
@@ -37,6 +37,7 @@
   "homepage": "https://github.com/rikuson/browxin-client#readme",
   "devDependencies": {
     "chai": "^4.0.2",
+    "dotenv": "^4.0.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.2",
     "eslint-loader": "^1.9.0",
@@ -55,7 +56,6 @@
     "mocha": "^3.4.2",
     "phantom": "^4.0.4",
     "phantomjs-polyfill-object-assign": "0.0.2",
-    "selenium-webdriver": "^3.4.0",
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
